<resources>
    <string name="app_name">momoApplication</string>
    <string name="Main_UserName">UserName</string>
    <string name="Main_Pass">Password</string>
    <string name="Main_Login">Login</string>
    <string name="Next">Next</string>
    <string name="outside">This is outside Layout</string>
    <string name="flipper_HelloWord">Flipper Hello Word</string>
    <string name="flipper_btnHello">Button Hello</string>
    <string name="flipper_Demo">flipper_demmo</string>
    <string name="Previous">Previous</string>
    <string name="contact_Name">Name here!</string>

    <string name="Main_Username">User Name</string>
    <string name="Main_momo">Hello Momo!!!</string>
    <string name="Main_Password">Password</string>

    <string name="flipper_btnnext">Next</string>
    <string name="flipper_btnlogin">Login</string>
    <string name="danhsach">Danh sách các môn học</string>
    <string name="tenMonHoc">Tên môn học</string>
    <string name="maMonHoc">Mã môn học</string>
    <string name="soTinChi">Số tín chỉ</string>
</resources>
